<resources>
  <string name="app_name">Log_in</string>
  <string name="log_in">Log In</string>
  <string name="login_in">LOG IN</string>
  <string name="register_">Regsiter</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="user_name">User Name</string>
  <string name="password">Password</string>
  <string name="register">REGISTER</string>
  <string name="login">LOGIN</string>
  <string name="loginregister">Register</string>
  <string name="login_login">Login</string>
  <string name="password_">PasswordLogin</string>
  <string name="username">Username</string>
</resources>