<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    >
  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      app:titleTextColor="#fff"
      android:background="@color/purple_500"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />
  <EditText
      android:id="@+id/firstName"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="58dp"
      android:hint="@string/first_name"
      android:textSize="22sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      android:autofillHints="string/autofill"
      android:inputType="text"
      />
  <EditText
      android:id="@+id/lastName"
      android:layout_width="350dp"
      android:layout_marginTop="20dp"
      android:layout_height="wrap_content"
      android:autofillHints="string/autofill"
      android:hint="@string/last_name"
      android:textSize="22sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/Uname"
      app:layout_constraintTop_toBottomOf="@+id/firstName"
      android:inputType="text"
      />

  <EditText
      android:id="@+id/Uname"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:layout_marginTop="20dp"
      android:hint="@string/user_name"
      android:textSize="22sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lastName"
      android:inputType="text"
      />
  <EditText
      android:id="@+id/pass_"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:hint="@string/password"
      android:inputType="textPassword"
      android:layout_marginTop="20dp"
      android:textSize="22sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Uname"
      />
  <Button
      android:id="@+id/reg_"
      android:layout_width="180dp"
      android:layout_height="wrap_content"
      android:text="@string/register"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pass_"
      />

  <Button
      android:id="@+id/Reg_login"
      android:layout_width="180dp"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:text="@string/login"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/reg_"
      android:layout_marginBottom="80dp"
      />
</androidx.constraintlayout.widget.ConstraintLayout>