<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="@color/purple_500"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:titleTextColor="#fff"
      />
  <EditText
      android:id="@+id/loginUsername"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="300dp"
      android:hint="@string/username"
      android:textSize="22sp"
      android:autofillHints="none"
      android:inputType="text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"

      />

  <EditText
      android:id="@+id/loginPassword"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:hint="@string/password"
      android:textSize="22sp"
      android:inputType="textPassword"
      app:layout_constraintBottom_toTopOf="@+id/loginButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/loginUsername"
      android:autofillHints="none"
      />

<!--  <EditText-->
<!--      android:id="@+id/vhuthu"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      android:layout_marginBottom="150dp"-->
<!--      app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
<!--      app:layout_constraintBottom_toTopOf="@+id/loginButton"-->
<!--    />-->

<!--  <EditText-->
<!--      android:id="@+id/vhuthuhawe"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      android:layout_marginTop="50dp"-->
<!--      app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
<!--      app:layout_constraintBottom_toTopOf="@+id/loginButton"-->
<!--      />-->


  <Button
      android:id="@+id/loginButton"
      android:layout_width="140dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="270dp"
      android:text="@string/login_login"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />


  <Button
      android:id="@+id/registerButton"
      android:layout_width="140dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="220dp"
      android:text="@string/loginregister"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />
</androidx.constraintlayout.widget.ConstraintLayout>